# discovery

./: .RData  .Rhistory  README.md  dev.py  pyproject.toml  quality.json
discover/: file.R  main.py  utils.py
discover/models/: qual_params.py
outputs/: pnml_file.pnml  quality.json
src/temp/: pnml_file.pnml  quality.json
