[tool.poetry]
name = "discover"
version = "0.1.0"
description = ""
authors = ["Ania DAHACHE <ania.dahache@univ-lr.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
python = ">=3.11,<3.13"
pydantic = "^1.10.7"
pandas = "^2.1.1"
uvicorn = "^0.27.1"
pm4py = "2.7.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
