[tool.poetry]
name = "discover"
version = "0.1.0"
description = ""
authors = ["Ania DAHACHE <ania.dahache@univ-lr.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyemd = "^1.0.0"
pm4py = "2.7.11.10"
graphviz = "^0.20.3"
chardet = "^5.2.0"

[tool.poetry.group.dev.dependencies]
python = ">=3.11,<3.13"
pydantic = "^1.10.7"
pandas = "^2.1.1"
uvicorn = "^0.27.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
